Changelog
=========

In Development
==============

- Fix: IdPaese.Irlanda è duplicato mentre Islanda è assente. Closes #144.
- README: aggiunto esempio di inserimento elemento Body. Addresses #141.

v1.1.3
======

Released on January 23, 2019
 
- New: nuovo logo per il progetto FatturaElettronica, by Roberto "Kalamun" Pasini. Closes 101.
- Fix: Link obsoleto alle specifiche tecniche ufficiali. Closes #139.
- Fix: ScontoMaggiorazione deve accettare Importo o Percentuale a 0. Addresses #136.
- Fix: ScontoMaggiorazione non deve accettare Importo e Percentuale entrambi valorizzati. Addresses #136.

v1.1.2
======
 
Released on January 21, 2019

- Fix: Validazione ScontoMaggiorazione dovrebbe accettare Importo o Percentuale a 0. Closes #136.

v1.1.1
======
 
Released on January 17, 2019

- Fix: Tabella CausalePagamento completata coi nomi di ogni pagamento (Michael Mairegger). Pull #127.
- Fix: Convalida Provincia non conforme ai controlli lato AgEntrate. Closes #129.
- Fix: CessionarioCommittente.RappresentanteFiscale, errore "sequenza tag errata". Closes #133.
- Fix: Supporto per 8 decimali nel PrezzoUnitario (Claudio Lepri). Pull #130; Closes #125.
- Bump FatturaElettronica.Core a 1.1.1.

v1.1
====
 
Released on January 6, 2019

- New: NetStandard 2.0 aggiunto ai target framework (Federico Dipuma). Closes #119.
- New: costruttore classe Fattura ora è pubblico. Closes #99.
- New: performance migliorata (Federico Dipuma). See #120.
- Fix: Quantità non può assumere valore negativo. Closes #115.
- Fix: Small typos. Closes #116.

v1.0.4
======
 
Released on January 2, 2019

- Fix: Aggiunta "Sud Sardegna" alla lista provincie (Massimo Linossi). Pull #111.

v1.0.3
======
 
Released on December 30, 2018

- Fix: UnitaMisura è opzionale. Addresses #102.

v1.0.2
======
 
Released on December 20, 2018.

- Fix: Titolo e CodEORI ignorano ordinamento. Closes #103.
- Fix: controllo UnitaMisura consente campo vuoto. Closes #102.

v1.0.1
======
 
Released on November 9, 2018.
